@@ -18,3 +18,4 @@ libfileset=org.apache.tools.ant.taskdefs.optional.extension.LibFileSet
 selector=org.apache.tools.ant.types.selectors.SelectSelector
 zipfileset=org.apache.tools.ant.types.ZipFileSet
 scriptfilter=org.apache.tools.ant.types.optional.ScriptFilter
+propertyset=org.apache.tools.ant.types.PropertySet
